--- a/about/index.html
+++ b/about/index.html
@@ -223,6 +223,30 @@
         // add all of the bodies to the world
         Composite.add(engine.world, [boxB,boxC,boxA, topWall, bottomWall, leftWall, rightWall, circle1,circle2,circle3,circle4,circle5,circle6,circle7,circle8,circle9]);
 
+        if (typeof window !== 'undefined') {
+            var updateGravity = function(event) {
+                var orientation = typeof window.orientation !== 'undefined' ? window.orientation : 0,
+                    gravity = engine.gravity;
+
+                if (orientation === 0) {
+                    gravity.x = Common.clamp(event.gamma, -90, 90) / 90;
+                    gravity.y = Common.clamp(event.beta, -90, 90) / 90;
+                } else if (orientation === 180) {
+                    gravity.x = Common.clamp(event.gamma, -90, 90) / 90;
+                    gravity.y = Common.clamp(-event.beta, -90, 90) / 90;
+                } else if (orientation === 90) {
+                    gravity.x = Common.clamp(event.beta, -90, 90) / 90;
+                    gravity.y = Common.clamp(-event.gamma, -90, 90) / 90;
+                } else if (orientation === -90) {
+                    gravity.x = Common.clamp(-event.beta, -90, 90) / 90;
+                    gravity.y = Common.clamp(event.gamma, -90, 90) / 90;
+                }
+            };
+
+            window.addEventListener('deviceorientation', updateGravity);
+        }
+
+
         // run the renderer
         Render.run(render);
 
