--- a/about/index.html
+++ b/about/index.html
@@ -38,6 +38,7 @@
             Runner = Matter.Runner,
             Bodies = Matter.Bodies,
             Composite = Matter.Composite,
+            Common = Matter.Common,
             Mouse = Matter.Mouse,
             MouseConstraint = Matter.MouseConstraint,
             Events = Matter.Events;
