added a line about verve

--- a/about/index.html
+++ b/about/index.html
@@ -279,6 +279,7 @@
         <li>In 2015, taught Maths and English with the Akaksha Foundation in Mumbai.</li>
         <li>Exhibited my artwork (zines) in 2017 with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
         <li>Exhibited my artwork (zines) in 2019 with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
+        <li>In 2018, I made an <a href="https://www.vervemagazine.in/travel-and-spaces/home-sweet-hutong" target="_blank">editoral illustration</a> for Verve Magazine</li>
         <li>Taught UX design to students to help them build better apps at Byjus Future School (<a href="https://www.figma.com/file/HE21CKRJWX9Iir1K6l8WJY/Mentoring" target="_blank">Teaching UX Design to Kids</a>).</li>
         <li>Learned to surf in Goa from September 2020 to January 2021.</li>
         <li>I’ve completed 3 Olympic Distance Triathalon, and I’m currently training for a Half Ironman </li>Triathalon.</li>
