--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 });
             }
         });
-        if(screen.width > 500) {
+        if(screen.width > 960) {
                 let sketch = function(p) {
                 let img;
                 let res = 5;
@@ -145,6 +145,22 @@
             <a href="/improved-video-classroom/">Read more</a>
         </div>
     </div>
+</section>
+<section id="experiments">
+    <h2>Essays &#38; Experiments</h2>
+    <div class="experiment-item">
+        <span>Jan 2022 - Generative Art</span>
+        <h3><a href="/art/exploring-instructional-art">Exploring instructional art</a></h3>
+    </div>
+    <div class="experiment-item">
+        <span>Nov 2021 - Teaching</span>
+        <h3><a href="https://new.karanmhatre.com/grid-explorer" target="_blank">Using a customisable dot grid to generate patterns and animations</a></h3>
+    </div>
+    <div class="experiment-item">
+        <span>Sept 2021 - Generative Art</span>
+        <h3><a href="https://karanmhatre.medium.com/poster-designs-using-generative-art-68128951cbe0" target="_blank">Poster Designs using Generative Art</a></h3>
+    </div>
+    </ul>
 </section>
 <!-- <section id="portfolioSecondary">
     <div class="project">
