Added audio visuals

--- a/creative-coding/index.html
+++ b/creative-coding/index.html
@@ -32,6 +32,12 @@
 <section class="content-section">
     <h2>Creating coding projects that I've crafted using Javascript.</h2>
     <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional.</p>
+    <p><b>Things I've currently working on,</b></p>
+    <ul>
+        <li><a href="https://editor.p5js.org/one-generated-pixel/full/M280uihnG" target="_blank">The Cave - an audio browser experience</a></li>
+        <li><a href="https://editor.p5js.org/one-generated-pixel/full/EXvBuuzur" target="_blank">Scapia - generative sounds</a></li>
+    </ul>
+    <p><b>Some other work,</b></p>
     <ul>
         <li><a href="new.karanmhatre.com/playground/impossible-puzzle" target="_blank">Playground</a></li>
         <li><a href="https://new.karanmhatre.com/grid-explorer" target="_blank">Grid Explorer</a></li>
