--- a/creative-coding/index.html
+++ b/creative-coding/index.html
@@ -32,7 +32,7 @@
 <section class="content-section">
     <h2>Creating coding projects that I've crafted using Javascript.</h2>
     <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional.</p>
-    <p><b>Things I've currently working on,</b></p>
+    <p><b>Things I am currently working on,</b></p>
     <ul>
         <li><a href="https://editor.p5js.org/one-generated-pixel/full/M280uihnG" target="_blank">The Cave - an audio browser experience</a></li>
         <li><a href="https://editor.p5js.org/one-generated-pixel/full/EXvBuuzur" target="_blank">Scapia - generative sounds</a></li>
