added audio exploration blog

--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
         <h3><a href="/art/exploring-instructional-art">Exploring instructional art</a></h3>
     </div>
     <div class="experiment-item">
+        <span>Jan 2022 - Generative Art</span>
+        <h3><a href="/art/explorations-in-code-and-audio">Explorations in code and audio</a></h3>
+    </div>
+    <div class="experiment-item">
         <span>Nov 2021 - Teaching</span>
         <h3><a href="https://new.karanmhatre.com/grid-explorer" target="_blank">Using a customisable dot grid to generate patterns and animations</a></h3>
     </div>
