--- a/index.html
+++ b/index.html
@@ -149,12 +149,17 @@
 <section id="experiments">
     <h2>Essays &#38; Experiments</h2>
     <div class="experiment-item">
-        <span>Jan 2022 - Generative Art</span>
-        <h3><a href="/art/exploring-instructional-art">Exploring instructional art</a></h3>
+        <span>Jan 2022 - Art Project</span>
+        <h3><a href="/art/explorations-in-code-and-type/">Type & Code</a></h3>
+    </div>
+    
+    <div class="experiment-item">
+        <span>Jan 2022 - Art Project</span>
+        <h3><a href="/art/exploring-instructional-art">Instructional Art</a></h3>
     </div>
     <div class="experiment-item">
-        <span>Jan 2022 - Generative Art</span>
-        <h3><a href="/art/explorations-in-code-and-audio">Explorations in code and audio</a></h3>
+        <span>Jan 2022 - Art Project</span>
+        <h3><a href="/art/explorations-in-code-and-audio">Audio & Code</a></h3>
     </div>
     <div class="experiment-item">
         <span>Nov 2021 - Teaching</span>
