--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
 </section>
 <section id="experiments">
     <h2>Essays &#38; Experiments</h2>
+
+    <div class="experiment-item">
+        <span>Jan 2022 - Art Project</span>
+        <h3><a href="/art/live-coding-music-using-gibber/">Live Coding Music with Gibber</a></h3>
+    </div>
+    
     <div class="experiment-item">
         <span>Jan 2022 - Art Project</span>
         <h3><a href="/art/explorations-in-code-and-type/">Type & Code</a></h3>
