vids instead of p5embeds

--- a/art/exploring-instructional-art/index.html
+++ b/art/exploring-instructional-art/index.html
@@ -79,7 +79,7 @@
 
     <p>Below is my recreation using p5JS. Click to regenerate with a new variation. <a href="https://editor.p5js.org/one-generated-pixel/sketches/47vAFoBBu" target="_blank">See the code</a>.</p>
 
-    <div class="embed">
+    <div class="p5Embed">
         <iframe src="https://editor.p5js.org/one-generated-pixel/full/47vAFoBBu" width="600" height="400"></iframe>
         <span>Following instructions from Sol LeWitt's Drawing #766</span>
     </div>
