--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
 
     <div class="experiment-item">
         <span>Jan 2022 - Art Project</span>
+        <h3><a href="/art/creating-album-art-using-shaders/">Creating Album Art using Shaders</a></h3>
+    </div>
+
+    <div class="experiment-item">
+        <span>Jan 2022 - Art Project</span>
         <h3><a href="/art/live-coding-music-using-gibber/">Live Coding Music with Gibber</a></h3>
     </div>
     
@@ -158,14 +163,13 @@
         <span>Jan 2022 - Art Project</span>
         <h3><a href="/art/explorations-in-code-and-type/">Type & Code</a></h3>
     </div>
-    
-    <div class="experiment-item">
-        <span>Jan 2022 - Art Project</span>
-        <h3><a href="/art/exploring-instructional-art">Instructional Art</a></h3>
-    </div>
     <div class="experiment-item">
         <span>Jan 2022 - Art Project</span>
         <h3><a href="/art/explorations-in-code-and-audio">Audio & Code</a></h3>
+    </div>
+    <div class="experiment-item">
+        <span>Jan 2022 - Art Project</span>
+        <h3><a href="/art/exploring-instructional-art">Instructional Art</a></h3>
     </div>
     <div class="experiment-item">
         <span>Nov 2021 - Teaching</span>
