--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
 
     <div class="experiment-item">
         <span>Jan 2022 - Art Project</span>
+        <h3><a href="/art/imagery-using-shaders-on-a-video-feed/">Imagery using shaders on a video feed</a></h3>
+    </div>
+
+    <div class="experiment-item">
+        <span>Jan 2022 - Art Project</span>
         <h3><a href="/art/creating-album-art-using-shaders/">Creating Album Art using Shaders</a></h3>
     </div>
 
