--- a/art/explorations-in-code-and-audio/index.html
+++ b/art/explorations-in-code-and-audio/index.html
@@ -7,6 +7,7 @@
 
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Explorations in code and audio">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692644935/favicon_kvalml.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
