--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@
 
     <meta name="robots" content="index, follow" />
     <meta name="description" content="">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692644935/favicon_kvalml.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -264,26 +265,27 @@
     </div>
     <h2>About me</h2>
     <p>I'm a designer, coder, and painter from India. Through my career I have worn many hats - a front-end developer, a product manager, and <b>now a product designer</b>. My versatility in skill-sets gives me a great perspective when it comes to product thinking and problem solving.</p>
-    <p>In December 2021, I moved to Berlin with my wife. </p>
-    <p>I did my <b>graduation in Computer Engineering</b>, and over time moved to crafting User Experience Design.</p>
-    <p>I also create <a href="creative-coding">generative art using p5JS</a>, and <a href="https://instagram.com/onesquarekaran" target="_blank">paint postcards</a> from places that I travel to.</p>
+    <p>In December 2021, I moved to Berlin. </p>
+    <p>I did my <b>graduation in Computer Engineering</b>, and over time moved to crafting digital user experiences.</p>
+    <p>I also create <a href="/creative-coding">generative art using p5JS</a>, and <a href="https://instagram.com/onesquarekaran" target="_blank">paint postcards</a> from places that I travel to.</p>
 
     <h2>Career Summary</h2>
-    <ul>
-        <li>I was a <b>Product Manager at Practo</b> from 2015-2017. Here I built a product to help patients to find the right hospital for their treatments (<a href="/understanding-the-patient-journey/" target="_blank">Read more</a>). I also helped scale up the Practo Tab product - a tablet device that helps doctors register patients and manage billing.</li>
-        <li>I was a <b>Senior Product Manager</b> at GOQii from 2017-2020. Here I <a href="/designing-live-health-and-fitness-classes/" target="_blank">designed and launched GOQii Play</a> - A platform for live online health and fitness classes and scaled it up to over 50K daily active users.</li>
-        <li>I was a <b>Lead UX Designer</b> at Byju Future School from 2020-2022. Here I designed a digital in-class and post class experience for 6-14 year old students to learn how to code.</li>
+    <ul class="career-list">
+        <li>I was a <b>Product Manager at <a href="https://www.practo.com/" target="_blank">Practo</a></b> from 2015-2017. Here I built a product to help patients to find the right hospital for their treatments (<a href="/understanding-the-patient-journey/" target="_blank">Read more</a>). I also helped scale up the Practo Tab product - a tablet device that helps doctors register patients and manage billing.</li>
+        <li>I was a <b>Senior Product Manager</b> at <a href="https://goqii.com" target="_blank">GOQii</a> from 2017-2020. Here I <a href="/designing-live-health-and-fitness-classes/" target="_blank">designed and launched GOQii Play</a> - A platform for live online health and fitness classes and scaled it up to over 50K daily active users.</li>
+        <li>I was a <b>Lead UX Designer</b> at <a href="https://www.byjusfutureschool.com/" target="_blank">Byju Future School</a> from 2020-2022. Here I designed a digital in-class and post class experience for 6-14 year old students to learn how to code.</li>
+        <li>Currently, I am a <b>Lead Product Designer</b> at <a href="https://lilt.com" target="_blank"> Lilt Inc</a> since April 2021. I work closely with translators and craft A.I. driven product features to help make them more efficient.</li>
     </ul>
     <h2>Other interesting things</h2>
-    <ul>
-        <li>In 2015, taught Maths and English with the Akaksha Foundation in Mumbai.</li>
-        <li>Exhibited my artwork (zines) in 2017 with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
-        <li>Exhibited my artwork (zines) in 2019 with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
+    <ul class="bulleted-list">
+        <li>In 2015, taught Maths and English to 6th Grade students with the Akaksha Foundation in Mumbai.</li>
+        <li>In 2017, exhibited my artwork (zines)  with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
+        <li>In 2019, exhibited my artwork (zines) with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
         <li>In 2018, I made an <a href="https://www.vervemagazine.in/travel-and-spaces/home-sweet-hutong" target="_blank">editoral illustration</a> for Verve Magazine</li>
         <li>Taught UX design to students to help them build better apps at Byjus Future School (<a href="https://www.figma.com/file/HE21CKRJWX9Iir1K6l8WJY/Mentoring" target="_blank">Teaching UX Design to Kids</a>).</li>
-        <li>Learned to surf in Goa from September 2020 to January 2021.</li>
-        <li>I’ve completed 3 Olympic Distance Triathalon, and I’m currently training for a Half Ironman </li>Triathalon.</li>
-        <li>I’ve done three 10-day Vipassana silent retreats and meditation is a big part of my life.</li>
+        <li>Learned to surf in Goa.</li>
+        <li>Completed 3 Olympic Distance Triathalon, and currently training for a Half Ironman Triathalon.</li>
+        <li>Did a few 10-day Vipassana silent retreats, and meditation is a big part of my life.</li>
     </ul>
 </section>
     </main>
