--- a/creative-coding/index.html
+++ b/creative-coding/index.html
@@ -7,6 +7,7 @@
 
     <meta name="robots" content="index, follow" />
     <meta name="description" content="">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692644935/favicon_kvalml.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
     <main id="pageContent">
         
 <section class="content-section">
-    <h2>Creating coding projects that I've crafted using Javascript.</h2>
+    <h2>Creative Coding Projects</h2>
     <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional.</p>
     <p><b>Things I am currently working on,</b></p>
     <ul>
