new home headline

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
 <section id="hero">
     <div class="content">
-        <h2>Hello, I'm a Berlin based product designer.</h2>
+        <h2>Hello 👋 <br> I'm a Berlin-based product designer who loves making things.</h2>
         <p>I have been working on digital products for over 10 years, and I'm currently a Lead Product Designer at <a href="https://lilt.com" target="_blank">Lilt Inc.</a></p>
         🙂 <a href="/about"> More about me</a>
     </div>
@@ -68,7 +68,35 @@
             <a href="/designing-live-health-and-fitness-classes/">Read more</a>
         </div>
     </div>
+    <div class="project">
+        <div class="project-image">
+            <a href="/understanding-the-patient-journey/">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258679/circle-practo_tyhm03.png" alt="Practo Thumbnail">
+            </a>
+        </div>
+        <div class="content">
+            <p class="year">2015 - User Research - Practo</p>
+            <h3><a href="/understanding-the-patient-journey/">Understanding Patient behavior when choosing a hospital</a></h3>
+            <p>In 2015, I conducted user research to build that a product that helps patients find the right hospital to meet their needs.</p>
+            <a href="/understanding-the-patient-journey/">Read more</a>
+        </div>
+    </div>
 </section>
+<!-- <section id="portfolioSecondary">
+    <div class="project">
+        <div class="project-image">
+            <a href="/gamification-revolution-in-childrens-learning/">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258680/circle-game_g7xawm.png" alt="Gamification Thumbnail">
+            </a>
+        </div>
+        <div class="content">
+            <p class="year">2021 - UX Design and Illustrations - WhiteHatJR (Now Byjus)</p>
+            <h3><a href="/gamification-revolution-in-childrens-learning/">Gamification Revolution in Children’s Learning</a></h3>
+            <p>WhiteHatJR is a platform where children learn how to code. We wanted the children to have fun while learning.</p>
+            <a href="/gamification-revolution-in-childrens-learning/">Read more</a>
+        </div>
+    </div>
+</section> -->
 <section id="experiments">
     <h2>Essays &#38; Experiments</h2>
 
@@ -109,47 +137,6 @@
     </div>
     </ul>
 </section>
-<!-- <section id="portfolioSecondary">
-    <div class="project">
-        <div class="project-image">
-            <a href="/gamification-revolution-in-childrens-learning/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258680/circle-game_g7xawm.png" alt="Gamification Thumbnail">
-            </a>
-        </div>
-        <div class="content">
-            <p class="year">2021 - UX Design and Illustrations - WhiteHatJR (Now Byjus)</p>
-            <h3><a href="/gamification-revolution-in-childrens-learning/">Gamification Revolution in Children’s Learning</a></h3>
-            <p>WhiteHatJR is a platform where children learn how to code. We wanted the children to have fun while learning.</p>
-            <a href="/gamification-revolution-in-childrens-learning/">Read more</a>
-        </div>
-    </div>
-    <div class="project">
-        <div class="project-image">
-            <a href="/understanding-the-patient-journey/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258679/circle-practo_tyhm03.png" alt="Practo Thumbnail">
-            </a>
-        </div>
-        <div class="content">
-            <p class="year">2015 - User Research - Practo</p>
-            <h3><a href="/understanding-the-patient-journey/">Understanding Patient behavior when choosing a hospital</a></h3>
-            <p>In 2015, I conducted user research to build that a product that helps patients find the right hospital to meet their needs.</p>
-            <a href="/understanding-the-patient-journey/">Read more</a>
-        </div>
-    </div>
-</section> -->
-<!-- <div class="project">
-        <div class="project-image">
-            <a href="/building-goqii-india-health-quiz/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501696/Frame_48095740_yntw3s.png" alt="GOQii Thumbnail">
-            </a>
-        </div>
-        <div class="content">
-            <p class="year">2017 - Product Management - GOQii</p>
-            <h3>Building GOQii India Health Quiz Challenge for +2M users</h3>
-            <p>The idea was to use the popular Live Quiz format to bust health-related myths and make Indians more aware of healthy habits.</p>
-            <a href="/building-goqii-india-health-quiz/">Read more</a>
-        </div>
-    </div> -->
     </main>
     <footer>
         <div class="social">
