--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
                 <li><a href="/" class="">Home / Case Studies</a></li>
                 <li><a href="/about" class="active">About Me</a></li>
                 <!-- <li><a href="/illustrations">Illustrations</a></li> -->
-                <li><a href="/creative-coding"  class="">Creative Coding</a></li>
+                <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
             </ul>
         </nav>
     </header>
@@ -270,22 +270,20 @@
     <p>I also create <a href="/creative-coding">generative art using p5JS</a>, and <a href="https://instagram.com/onesquarekaran" target="_blank">paint postcards</a> from places that I travel to.</p>
 
     <h2>Career Summary</h2>
-    <ul class="career-list">
-        <li>I was a <b>Product Manager at <a href="https://www.practo.com/" target="_blank">Practo</a></b> from 2015-2017. Here I built a product to help patients to find the right hospital for their treatments (<a href="/understanding-the-patient-journey/" target="_blank">Read more</a>). I also helped scale up the Practo Tab product - a tablet device that helps doctors register patients and manage billing.</li>
-        <li>I was a <b>Senior Product Manager</b> at <a href="https://goqii.com" target="_blank">GOQii</a> from 2017-2020. Here I <a href="/designing-live-health-and-fitness-classes/" target="_blank">designed and launched GOQii Play</a> - A platform for live online health and fitness classes and scaled it up to over 50K daily active users.</li>
-        <li>I was a <b>Lead UX Designer</b> at <a href="https://www.byjusfutureschool.com/" target="_blank">Byju Future School</a> from 2020-2022. Here I designed a digital in-class and post class experience for 6-14 year old students to learn how to code.</li>
-        <li>Currently, I am a <b>Lead Product Designer</b> at <a href="https://lilt.com" target="_blank"> Lilt Inc</a> since April 2021. I work closely with translators and craft A.I. driven product features to help make them more efficient.</li>
+    <ul class="bulleted-list">
+        <li>(2015-2017)<b> Product Manager at <a href="https://www.practo.com/" target="_blank">Practo</a></b> Here I built a product to help patients to find the right hospital for their treatments (<a href="/understanding-the-patient-journey/" target="_blank">Read more</a>). I also helped scale up the Practo Tab product - a tablet device that helps doctors register patients and manage billing.</li>
+        <li>(2017-2020)<b> Senior Product Manager</b> at <a href="https://goqii.com" target="_blank">GOQii</a> Here I <a href="/designing-live-health-and-fitness-classes/" target="_blank">designed and launched GOQii Play</a> - A platform for live online health and fitness classes and scaled it up to over 50K daily active users.</li>
+        <li>(2020-2022)<b> Lead UX Designer</b> at <a href="https://www.byjusfutureschool.com/" target="_blank">Byju Future School</a> from 2020-2022. Here I designed a digital in-class and post class experience for 6-14 year old students to learn how to code.</li>
+        <li>(2022-Present) <b>Lead Product Designer</b> at <a href="https://lilt.com" target="_blank"> Lilt Inc</a> since April 2021. I work closely with translators and craft A.I. driven product features to help make them more efficient.</li>
     </ul>
     <h2>Other interesting things</h2>
     <ul class="bulleted-list">
-        <li>In 2015, taught Maths and English to 6th Grade students with the Akaksha Foundation in Mumbai.</li>
-        <li>In 2017, exhibited my artwork (zines)  with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
-        <li>In 2019, exhibited my artwork (zines) with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
-        <li>In 2018, I made an <a href="https://www.vervemagazine.in/travel-and-spaces/home-sweet-hutong" target="_blank">editoral illustration</a> for Verve Magazine</li>
-        <li>Taught UX design to students to help them build better apps at Byjus Future School (<a href="https://www.figma.com/file/HE21CKRJWX9Iir1K6l8WJY/Mentoring" target="_blank">Teaching UX Design to Kids</a>).</li>
-        <li>Learned to surf in Goa.</li>
-        <li>Completed 3 Olympic Distance Triathalon, and currently training for a Half Ironman Triathalon.</li>
-        <li>Did a few 10-day Vipassana silent retreats, and meditation is a big part of my life.</li>
+        <li>(2015) taught Maths and English to 6th Grade students with the Akaksha Foundation in Mumbai.</li>
+        <li>(2017) exhibited my artwork (zines)  with <a href="https://www.instagram.com/bombayunderground" target="_blank">Bombay Underground</a>.</li>
+        <li>(2019) exhibited my artwork (zines) with <a href="https://www.instagram.com/gaysifamily/" target="_blank">Gaysi Family </a>.</li>
+        <li>(2018) I made an <a href="https://www.vervemagazine.in/travel-and-spaces/home-sweet-hutong" target="_blank">editoral illustration</a> for Verve Magazine</li>
+        <li>(2020) Mentored design students on <a href="https://mentorcruise.com/" target="_blank">MentorCruise.</a></li>
+        <li>(2021) Taught UX design to students to help them build better apps at Byjus Future School (<a href="https://www.figma.com/file/HE21CKRJWX9Iir1K6l8WJY/Mentoring" target="_blank">Teaching UX Design to Kids</a>).</li>
     </ul>
 </section>
     </main>
