--- a/improved-video-classroom/index.html
+++ b/improved-video-classroom/index.html
@@ -24,7 +24,7 @@
                 <li><a href="/" class="">Home / Case Studies</a></li>
                 <li><a href="/about" class="">About Me</a></li>
                 <!-- <li><a href="/illustrations">Illustrations</a></li> -->
-                <li><a href="/creative-coding"  class="">Creative Coding</a></li>
+                <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
             </ul>
         </nav>
     </header>
