--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="/" class="active">Home / Case Studies</a></li>
                 <li><a href="/about" class="">About Me</a></li>
                 <!-- <li><a href="/illustrations">Illustrations</a></li> -->
-                <li><a href="/creative-coding"  class="">Creative Coding</a></li>
+                <!-- <li><a href="/creative-coding"  class="">Creative Coding</a></li> -->
             </ul>
         </nav>
     </header>
@@ -32,111 +32,151 @@
         
 <section id="hero">
     <div class="content">
-        <h2>Hello 👋 <br> I'm a Berlin-based product designer who loves making things.</h2>
-        <p>I have been working on digital products for over 10 years, and I'm currently a Lead Product Designer at <a href="https://lilt.com" target="_blank">Lilt Inc.</a></p>
-        🙂 <a href="/about"> More about me</a>
+        <h2>Hello 👋 I'm a Berlin-based product designer</h2>
+        <p>I've been working with digital products for over 10 years, and I'm currently a Lead Product Designer at <a href="https://lilt.com" target="_blank">Lilt Inc.</a></p>
+        <a href="/about" class="button">About me</a>
     </div>
     <div class="image">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1692646358/pic_o0wpew.jpg" alt="Karan Mhatre">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1694001230/hero-image_uahtfn.png" alt="Karan Mhatre">
     </div>    
 </section>
-<section id="portfolio">
-    <h2>Case Studies</h2>
-    <div class="project">
-        <div class="project-image">
-            <a href="/improved-video-classroom/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258353/circle-vc-thumbnail_qdzm32.png" alt="Bjyu Classroom UX Design Thumbnail">
-            </a>
-        </div>
-        <div class="content">
-            <p class="year">2021 - UX Design - WhiteHatJR</p>
-            <h3><a href="/improved-video-classroom/">Designing an online classroom experience for teachers</a></h3>
-            <p>Redesigned an existing product experience to help teachers manage additional students in an online classroom.</p>
-            <a href="/improved-video-classroom/">Read more</a>
-        </div>
+<section id="portfolio" class="listing-section">
+    <div class="listing-header">
+        <h2>Case Studies</h2>
+        <p>An exploration of coding projects, with no real purpose in mind other than creating something.</p>
     </div>
-    <div class="project">
-        <div class="project-image">
-            <a href="/designing-live-health-and-fitness-classes/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258436/circle-play-thumbnail_hey4xe.png" alt="GOQii Play Product Design Thumbnail">
-            </a>
+    <div class="project-list">
+        <div class="project">
+            <div class="content">
+                <p class="year">2021 - UX Design - WhiteHatJR</p>
+                <h3><a href="/improved-video-classroom/">Designing an online classroom experience for teachers</a></h3>
+                <p>Redesigned an existing product experience to help teachers manage additional students in an online classroom.</p>
+                <!-- <a href="/improved-video-classroom/" class="button">Read more</a> -->
+            </div>
         </div>
-        <div class="content">
-            <p class="year">2017 - UX Design and Product - GOQii</p>
-            <h3><a href="/designing-live-health-and-fitness-classes/">Designing Live Online Health Class on mobile</a></h3>
-            <p>Designed and launched a Live Onlione Health and Fitness platform on the GOQii mobile app and grew it to over 500K users in 6 months.</p>
-            <a href="/designing-live-health-and-fitness-classes/">Read more</a>
+        <div class="project">
+            <div class="content">
+                <p class="year">2017 - UX Design and Product - GOQii</p>
+                <h3><a href="/designing-live-health-and-fitness-classes/">Designing Live Online Health Class on mobile</a></h3>
+                <p>Designed and launched a Live Onlione Health and Fitness platform on the GOQii mobile app and grew it to over 500K users in 6 months.</p>
+                <!-- <a href="/designing-live-health-and-fitness-classes/" class="button">Read more</a> -->
+            </div>
         </div>
-    </div>
-    <div class="project">
-        <div class="project-image">
-            <a href="/understanding-the-patient-journey/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258679/circle-practo_tyhm03.png" alt="Practo Thumbnail">
-            </a>
-        </div>
-        <div class="content">
-            <p class="year">2015 - User Research - Practo</p>
-            <h3><a href="/understanding-the-patient-journey/">Understanding Patient behavior when choosing a hospital</a></h3>
-            <p>In 2015, I conducted user research to build that a product that helps patients find the right hospital to meet their needs.</p>
-            <a href="/understanding-the-patient-journey/">Read more</a>
+        <div class="project">
+            <!-- <div class="project-image">
+                <a href="/understanding-the-patient-journey/">
+                    <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258679/circle-practo_tyhm03.png" alt="Practo Thumbnail">
+                </a>
+            </div> -->
+            <div class="content">
+                <p class="year">2015 - User Research - Practo</p>
+                <h3><a href="/understanding-the-patient-journey/">Understanding Patient behavior when choosing a hospital</a></h3>
+                <p>In 2015, I conducted user research to build that a product that helps patients find the right hospital to meet their needs.</p>
+                <!-- <a href="/understanding-the-patient-journey/" class="button">Read more</a> -->
+            </div>
         </div>
     </div>
 </section>
-<!-- <section id="portfolioSecondary">
-    <div class="project">
-        <div class="project-image">
-            <a href="/gamification-revolution-in-childrens-learning/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258680/circle-game_g7xawm.png" alt="Gamification Thumbnail">
-            </a>
+<section id="essay" class="listing-section">
+    <div class="listing-header">
+        <h2>Essays</h2>
+        <p>Documentation of personal projects as well as occasional writings about product design.</p>
+    </div>
+    <div class="project-list">
+        <div class="project">
+            <div class="content">
+                <p class="year">2021 - Product Design</p>
+                <h3><a href="/improved-video-classroom/">Online reviews have one major problem</a></h3>
+                <p>I recently went on a trip. I decided to book a hostel from Booking.com. It was a very well rated hostel. On my first day, I met some nice people who were also staying there...</p>
+            </div>
         </div>
-        <div class="content">
-            <p class="year">2021 - UX Design and Illustrations - WhiteHatJR (Now Byjus)</p>
-            <h3><a href="/gamification-revolution-in-childrens-learning/">Gamification Revolution in Children’s Learning</a></h3>
-            <p>WhiteHatJR is a platform where children learn how to code. We wanted the children to have fun while learning.</p>
-            <a href="/gamification-revolution-in-childrens-learning/">Read more</a>
+        <div class="project">
+            <div class="content">
+                <p class="year">2017 - Design Management</p>
+                <h3><a href="/designing-live-health-and-fitness-classes/">Just build a “like” feature</a></h3>
+                <p>Are you tired of stakeholders underestimating the requirements. Learn how to combat it with the power of questions.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="content">
+                <p class="year">Jan 2022 - Art Project</p>
+                <h3><a href="/art/explorations-in-code-and-audio">Experiments in Audio & Code</a></h3>
+                <p>A collection of audio related experiments made using p5js.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="content">
+                <p class="year">Jan 2022 - Art Project</p>
+                <h3><a href="/art/explorations-in-code-and-type/">Experiments with Type & Code</a></h3>
+                <p>A collection of text and typography related experiments made using p5js.</p>
+            </div>
+        </div>
+        <div class="project">
+            <div class="content">
+                <p class="year">Jan 2022 - Art Project</p>
+                <h3><a href="/art/exploring-instructional-art/">Instructional Art</a></h3>
+                <p>The root of Instructional Art is the question - Can an idea be a work of art?</p>
+            </div>
         </div>
     </div>
-</section> -->
-<section id="experiments">
-    <h2>Essays &#38; Experiments</h2>
-
-    <div class="experiment-item">
-        <span>Jan 2022 - Art Project</span>
-        <h3><a href="/art/imagery-using-shaders-on-a-video-feed/">Imagery using shaders on a video feed</a></h3>
-    </div>
-
-    <div class="experiment-item">
-        <span>Jan 2022 - Art Project</span>
-        <h3><a href="/art/creating-album-art-using-shaders/">Creating Album Art using Shaders</a></h3>
-    </div>
-
-    <div class="experiment-item">
-        <span>Jan 2022 - Art Project</span>
-        <h3><a href="/art/live-coding-music-using-gibber/">Live Coding Music with Gibber</a></h3>
-    </div>
-    
-    <div class="experiment-item">
-        <span>Jan 2022 - Art Project</span>
-        <h3><a href="/art/explorations-in-code-and-type/">Type & Code</a></h3>
-    </div>
-    <div class="experiment-item">
-        <span>Jan 2022 - Art Project</span>
-        <h3><a href="/art/explorations-in-code-and-audio">Audio & Code</a></h3>
-    </div>
-    <div class="experiment-item">
-        <span>Jan 2022 - Art Project</span>
-        <h3><a href="/art/exploring-instructional-art">Instructional Art</a></h3>
-    </div>
-    <div class="experiment-item">
-        <span>Nov 2021 - Teaching</span>
-        <h3><a href="https://new.karanmhatre.com/grid-explorer" target="_blank">Using a customisable dot grid to generate patterns and animations</a></h3>
-    </div>
-    <div class="experiment-item">
-        <span>Sept 2021 - Generative Art</span>
-        <h3><a href="https://karanmhatre.medium.com/poster-designs-using-generative-art-68128951cbe0" target="_blank">Poster Designs using Generative Art</a></h3>
-    </div>
-    </ul>
 </section>
+<div class="dark-mode">
+    <section id="experiments" class="listing-section">
+        <div class="listing-header">
+            <h2>Digital Playground</h2>
+            <p>An exploration of coding projects, with no real purpose in mind other than creating something. Click on the video to explore them further. Some of these are interactive.</p>
+        </div>
+        <div class="grid-projects">
+            <ul>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/binary-sync/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627491545/createwithcode/binary-beats/binary-beats-short_j0q9ez.mov" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/beats-02/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627901751/createwithcode/beats-02/circle-beats-short_rvxamm.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/character-stretch/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_584/v1627449757/createwithcode/character-stretch/Screen_Recording_2021-07-28_at_10.43.12_AM_r97h1m.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="hhttps://genart.karanmhatre.com/center-split/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628253229/createwithcode/center-split/center-short_icezo4.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/color-beats/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1627453831/createwithcode/color%20beat/color-beats_xkdf42.mov" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/paper-fold/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_584/v1628507922/createwithcode/3d-paper-fold/Screen_Recording_2021-08-09_at_1.38.56_PM_m0czj4.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/organic-threads/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,h_626/v1627395998/createwithcode/flower-3/Screen_Recording_2021-07-27_at_7.33.41_PM_qiiuqq.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/machina/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628605570/createwithcode/machina/Screen_Recording_2021-08-09_at_5.29.20_PM_tla74n.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/type-bulge/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_crop,h_720,w_720/v1627902345/createwithcode/type%20bulge/Bulge2_fhgu5n.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/space-dust/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_519/v1627383096/createwithcode/space-dust/Screen_Recording_2021-07-22_at_4.41.17_PM_ob89le.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/type-pull/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1628061895/createwithcode/guten-morgen-type-pull/type-stretch02_gddelg.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/sphere-gradient/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,h_1023/v1628252159/createwithcode/sphere-gradient/Screen_Recording_2021-08-06_at_5.44.59_PM_tdps6b.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/circle-3d-waves/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_719/v1628260284/createwithcode/circle-3d-waves/Screen_Recording_2021-08-06_at_5.30.21_PM_csvcci.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/square-cards/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/c_scale,w_996/v1628344261/createwithcode/square-cards/Screen_Recording_2021-08-07_at_7.03.48_PM_fw6qae.mp4" muted autoplay loop></video></a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://genart.karanmhatre.com/matter/"><video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1629464125/createwithcode/matter/Screen_Recording_2021-08-16_at_5.02.10_PM_mp6xyk.mp4" muted autoplay loop></video></a>
+                </li>
+            </ul>
+        </div> 
+    </section>
+</div>
     </main>
     <footer>
         <div class="social">
