--- a/about/index.html
+++ b/about/index.html
@@ -297,7 +297,7 @@
             </ul>
         </div>
         <p id="credit">
-            This website was built with ❤️ by me using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
+            I built this website using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
         </p>
     </footer>
 </body>
