--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
     <main id="pageContent">
         
 <section id="hero">
+    <div class="image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1694008549/hero-image_k4ifka.jpg" alt="Painting by Karan Mhatre">
+        <span>PS: I also paint.</span>
+    </div>    
     <div class="content">
         <h2>Hello 👋 I'm a Berlin-based product designer</h2>
         <p>I've been working with digital products for over 10 years, and I'm currently a Lead Product Designer at <a href="https://lilt.com" target="_blank">Lilt Inc.</a></p>
         <a href="/about" class="button">About me</a>
     </div>
-    <div class="image">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1694001230/hero-image_uahtfn.png" alt="Karan Mhatre">
-    </div>    
 </section>
 <section id="portfolio" class="listing-section">
     <div class="listing-header">
@@ -188,7 +189,7 @@
             </ul>
         </div>
         <p id="credit">
-            This website was built with ❤️ by me using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
+            I built this website using the <a href="https://www.11ty.dev/" target="_blank">Eleventy Framework</a>.
         </p>
     </footer>
 </body>
